test/tests/compiler/8_loops/invalid_parse/extra_credit/label_in_loop_header.plx
pub fn main(none) i32 {
    loop i: i32 = 0 while label i < 10 .. i = i + 1 {
        ;
    }
    return 0
}
